# Manipul-o-de-Arquivos

./: CMakeLists.txt  ListaDinEncad.c  ListaDinEncad.h  README.md  fornecido.c  fornecido.h  funcoesArq.c  funcoesArq.h  funcoesBusca.c  funcoesBusca.h  funcoesDeImpessao.c  funcoesDeImpessao.h  insercaoAtualizacao.c  insercaoAtualizacao.h  main.c
