cmake_minimum_required(VERSION 3.17)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled main.c fornecido.c fornecido.h funcoesArq.c funcoesArq.h ListaDinEncad.c ListaDinEncad.h funcoesBusca.c funcoesBusca.h funcoesDeImpessao.c funcoesDeImpessao.h insercaoAtualizacao.c insercaoAtualizacao.h)